fix: UserForm dimensions
Made userform wider and added extra space at the bottom in case expansion needed

--- a/src/components/layout/UserForm/userform.module.css
+++ b/src/components/layout/UserForm/userform.module.css
@@ -9,14 +9,15 @@
 
 .form {
   width: 100%;
-  max-width: 480px;
+  max-width: 1000px;
+  min-height:500px;
   padding: 24px;
   border-radius: 16px;
   border: 2px solid var(--fg);
   background-color: var(--bg);
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 50px;
   outline: 2px solid var(--fg);
   outline-offset: 6px;
 }
@@ -27,7 +28,7 @@
   padding: 12px 14px;
   border-radius: 6px;
   border: 1px solid var(--fg);
-  font-size: 15px;
+  font-size: 16px;
   outline: none;
   transition: none;
 }
